Add api URL in env variables.

--- a/EnkiDashboard.xcodeproj/xcshareddata/xcschemes/EnkiDashboard.xcscheme
+++ b/EnkiDashboard.xcodeproj/xcshareddata/xcschemes/EnkiDashboard.xcscheme
@@ -72,6 +72,11 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
+            key = "API_URL"
+            value = "http://52.117.59.162:3001/v1/stats/all"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
             key = "API_TOKEN"
             value = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1dWlkIjoiIiwidXNlcl9uYW1lIjoiYmV0YUBlbmtpYWkuY29tIiwiZXhwIjoxNjM0ODQ5ODQ5LCJpc3MiOiJsb2NhbGhvc3Q6ODA4MCJ9.9kF7HvhTLiV2b7GZ2w2z03ybI2AG2IbRpT5AIufexQg"
             isEnabled = "YES">
